# Cpp3DFractals

./: .gitattributes  BoxPlorer2.cpp  CMakeLists.txt  Camera.cpp  Glsl.cpp  Glsl.h  Interpolate.cpp  OculusSdk2.cpp  OculusSdk4.cpp  README  README.md  Sdl2Test.cpp  Shader.cpp  ShaderProcs.h  TGA.h  Uniforms.cpp  Uniforms.h  main.cpp
.claude/: settings.local.json
AntTweakBar/src/: TwMgr.cpp  TwPrecomp.h
branches/.svn/: entries
cfgs/knighty/Reflectoids/: last.cfg
cfgs/mandelbulb/: last.cfg  setup.inc
cfgs/menger.cfg.data/: background.tga
cfgs/rca/: background.tga
cfgs/shadertoy/AbandonedBase/: background.tga
cfgs/shadertoy/BrightonBeach/: background.tga
cfgs/shadertoy/FlutterOrOrbs/: background.tga
cfgs/shadertoy/LuxoJr/: background.tga
cfgs/shadertoy/Monster/: background.tga
cfgs/shadertoy/TheMine/: background.tga
tags/.svn/: entries
textures/: texture-0.tga  texture-1.tga  texture-10.tga  texture-11.tga  texture-12.tga  texture-17.tga  texture-18.tga  texture-19.tga  texture-20.tga  texture-21.tga  texture-24.tga  texture-26.tga  texture-27.tga  texture-29.tga  texture-3.tga  texture-31.tga  texture-32.tga  texture-34.tga  texture-35.tga  texture-4.tga  texture-40.tga  texture-43.tga  texture-47.tga  texture-48.tga  texture-50.tga  texture-51.tga  texture-53.tga  texture-56.tga  texture-57.tga  texture-59.tga  texture-60.tga
trunk/: .gitignore  CMakeLists.txt  OculusSdk2.cpp  OculusSdk4.cpp  Sdl2Test.cpp  boxplorer2.cpp  glsl.cpp  uniforms.cpp  uniforms.h
trunk/.claude/: settings.local.json
trunk/.svn/: all-wcprops  entries
trunk/AntTweakBar/.svn/: all-wcprops  entries
trunk/AntTweakBar/include/.svn/: all-wcprops  entries
trunk/AntTweakBar/src/.svn/: all-wcprops  entries
trunk/AntTweakBar/src/res/.svn/: all-wcprops  entries
trunk/GL/.svn/: all-wcprops  entries
trunk/cfgs/.svn/: entries
trunk/cfgs/Spuds/.svn/: all-wcprops  entries
trunk/cfgs/alexl/.svn/: all-wcprops  entries
trunk/cfgs/blend-menger-sphere/.svn/: entries
trunk/cfgs/boxplorer/.svn/: all-wcprops
trunk/cfgs/cbv/.svn/: all-wcprops
trunk/cfgs/ducks/.svn/: all-wcprops  entries
trunk/cfgs/glslsandbox/.svn/: entries
trunk/cfgs/glslsandbox/bloodvessel/.svn/: entries
trunk/cfgs/glslsandbox/hyperbolic/.svn/: all-wcprops
trunk/cfgs/glslsandbox/juggler/.svn/: entries
trunk/cfgs/glslsandbox/starnest/.svn/: entries
trunk/cfgs/icosakifs.cfg.data/.svn/: all-wcprops
trunk/cfgs/knighty/HypTess/.svn/: all-wcprops  entries
trunk/cfgs/knighty/Mandel/.svn/: entries
trunk/cfgs/knighty/Pkleinian-Menger/.svn/: entries
trunk/cfgs/knighty/Pkleinian-Menger2/.svn/: all-wcprops
trunk/cfgs/knighty/Pkleinian/.svn/: all-wcprops  entries
trunk/cfgs/knighty/Pkleinian2/.svn/: all-wcprops  entries
trunk/cfgs/knighty/Reflectoids/.svn/: all-wcprops
trunk/cfgs/knighty/SpentFuelRods/.svn/: entries
trunk/cfgs/mandalabeth-1522/.svn/: entries
trunk/cfgs/mandelbrot/.svn/: all-wcprops
trunk/cfgs/mandelbulb/.svn/: entries
trunk/cfgs/marius-1.cfg.data/.svn/: all-wcprops  entries
trunk/cfgs/marius-2.cfg.data/.svn/: all-wcprops
trunk/cfgs/marius-3.cfg.data/.svn/: all-wcprops  entries
trunk/cfgs/mbox-fp64/.svn/: all-wcprops
trunk/cfgs/menger-sphere/.svn/: all-wcprops  entries
trunk/cfgs/menger.cfg.data/.svn/: all-wcprops  entries
trunk/cfgs/octakifs/.svn/: entries
trunk/cfgs/pathtracer/.svn/: entries
trunk/cfgs/radiance/.svn/: all-wcprops  entries
trunk/cfgs/rca/.svn/: all-wcprops  entries
trunk/cfgs/rotmenger/.svn/: all-wcprops
trunk/cfgs/rrrola/.svn/: all-wcprops
trunk/cfgs/shadertoy/.svn/: entries
trunk/cfgs/shadertoy/AncientTemple/.svn/: all-wcprops
trunk/cfgs/shadertoy/BoxOfLights/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/BrightonBeach/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/Cartoon/.svn/: entries
trunk/cfgs/shadertoy/ChainsAndGears/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/CookTorrance/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/Coyote/.svn/: entries
trunk/cfgs/shadertoy/CubicEntanglement/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/Decelerator/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/EscapingFleet/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/FishSwimming/.svn/: entries
trunk/cfgs/shadertoy/FlutterOrOrbs/.svn/: entries
trunk/cfgs/shadertoy/FractalCondos/.svn/: all-wcprops
trunk/cfgs/shadertoy/FurTrees/.svn/: entries
trunk/cfgs/shadertoy/FuzzyField/.svn/: all-wcprops
trunk/cfgs/shadertoy/GeneratorsRedux/.svn/: all-wcprops
trunk/cfgs/shadertoy/GlassEel/: background.tga
trunk/cfgs/shadertoy/GlassEel/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/Gyroid/.svn/: all-wcprops
trunk/cfgs/shadertoy/IceCave/.svn/: all-wcprops
trunk/cfgs/shadertoy/LightsOn/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/Monster/.svn/: all-wcprops
trunk/cfgs/shadertoy/Parthenon/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/SocDEL/.svn/: all-wcprops
trunk/cfgs/shadertoy/SpaceJewels/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/Venice/: background.tga
trunk/cfgs/shadertoy/Xyptonjtroz/.svn/: entries
trunk/cfgs/shadertoy/apollonian/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/elevated/.svn/: all-wcprops
trunk/cfgs/shadertoy/hell/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/insect/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/mike/.svn/: entries
trunk/cfgs/shadertoy/mountains/.svn/: entries
trunk/cfgs/shadertoy/spacecave/.svn/: all-wcprops  entries
trunk/cfgs/shadertoy/starnursery/.svn/: entries
trunk/cfgs/speelplaats/.svn/: all-wcprops
trunk/cfgs/speelplaats/kalibox2d/.svn/: entries
trunk/cfgs/speelplaats/kalibox3d/.svn/: all-wcprops
trunk/cfgs/syntopia/.svn/: all-wcprops
trunk/cfgs/syntopia/life/.svn/: all-wcprops  entries
trunk/include/.svn/: all-wcprops  entries
trunk/textures/: texture-13.tga  texture-22.tga  texture-23.tga  texture-25.tga  texture-33.tga  texture-36.tga  texture-39.tga  texture-45.tga  texture-49.tga  texture-5.tga  texture-54.tga
trunk/utils/.svn/: all-wcprops  entries
wiki/.svn/: all-wcprops  entries
(+1 files in other folders)
